# paddleocr-docker

./: .dockerignore  Dockerfile  Makefile  README.md  download.py  hello.py  main.py  pyproject.toml  rotate.py  test.py
data/: example.txt
