[project]
name = "paddleocr-docker"
version = "0.1.0"
description = "Building a docker image that serves PaddleOCR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.4",
    "paddleocr>=2.9.1",
    "paddlepaddle>=2.6.2",
    "pytest>=8.3.3",
    "python-multipart>=0.0.17",
    "requests>=2.32.3",
    "setuptools>=75.3.0",
    "uvicorn>=0.32.0",
    "wheel>=0.44.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "jupyter>=1.1.1", "ruff>=0.7.2"]
